--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -7,36 +7,36 @@
     tools:context=".views.LandingActivity">
 
     <ImageView
-        android:id="@+id/woof_text1"
+        android:id="@+id/woof_logo"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="150dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/woof_text1"
+        app:srcCompat="@drawable/woof_logo_pink"
         />
 
-    <ImageView
-        android:id="@+id/woof_logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/woof_text1"
-        app:srcCompat="@drawable/woof_logo" />
+<!--    <ImageView-->
+<!--        android:id="@+id/woof_logo"-->
+<!--        android:layout_width="200dp"-->
+<!--        android:layout_height="200dp"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginTop="16dp"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        android:scaleType="fitCenter"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/woof_text1"-->
+<!--        app:srcCompat="@drawable/woof_logo" />-->
 
     <EditText
         android:id="@+id/edtEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="20dp"
         android:ems="10"
         android:inputType="textEmailAddress"
         android:hint="@string/email"
@@ -55,49 +55,50 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edtEmail"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"/>
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"/>
 
     <Button
         android:id="@+id/btnSignIn"
         android:text="@string/sign_in"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtPassword"
         />
 
-    <Button
-        android:id="@+id/btnSignUp"
-        android:text="@string/sign_up"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
-        app:layout_constraintVertical_bias="1.0"
-        />
-
     <TextView
-        android:id="@+id/tvWoofAd"
+        android:id="@+id/tvCreateAccount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Meet single dogs near you!"
-        android:textColor="@color/purple_500"
+        android:text="Don't have an account?"
+        android:textColor="@color/spacecadet"
         android:textAlignment="center"
-        android:fontFamily="casual"
         android:textSize="20sp"
         android:layout_marginTop="125dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSignIn"/>
+
+<!--    <Button-->
+<!--        android:id="@+id/btnSignUp"-->
+<!--        android:text="@string/sign_up"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="8dp"-->
+<!--        android:layout_marginEnd="8dp"-->
+<!--        android:layout_marginBottom="8dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"-->
+<!--        app:layout_constraintVertical_bias="1.0"-->
+<!--        />-->
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
