--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FEFFFE</color>
+    <color name="azure">#357DED</color>
+    <color name="bittersweet">#FE3F3C</color>
+    <color name="honeyyellow">#F3B02B</color>
+    <color name="spacecadet">#2A2E45</color>
 </resources>
