--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,22 @@
     <!-- Base application theme. -->
     <style name="Theme.PROG20082_Project_AV_JH" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/azure</item>
+        <item name="colorPrimaryVariant">@color/spacecadet</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/bittersweet</item>
+        <item name="colorSecondaryVariant">@color/honeyyellow</item>
+        <item name="colorOnSecondary">@color/spacecadet</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
         <!-- Customize your theme here. -->
+        <item name="android:textColor">@color/spacecadet</item>
+        <item name="fontFamily">@font/nunito</item>
     </style>
+
+<!--    <style name="Theme" parent="@android:style/TextAppearance">-->
+<!--        <item name="android:textColor">@color/spacecadet</item>-->
+<!--        <item name="fontFamily">@font/nunito</item>-->
+<!--    </style>-->
 </resources>
