--- a/app/src/main/res/layout/content_swipe.xml
+++ b/app/src/main/res/layout/content_swipe.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:showIn="@layout/app_bar_swipe">
+    tools:showIn="@layout/app_bar">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabLike"
@@ -13,7 +13,7 @@
         app:fabCustomSize="75sp"
         android:layout_margin="30dp"
         android:clickable="true"
-        android:backgroundTint="@android:color/holo_blue_bright"
+        android:backgroundTint="@android:color/holo_green_light"
         android:src="@android:drawable/btn_star"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
@@ -25,7 +25,7 @@
         app:fabCustomSize="75sp"
         android:layout_margin="30dp"
         android:clickable="true"
-        android:backgroundTint="@android:color/holo_red_light"
+        android:backgroundTint="@color/bittersweet"
         android:src="@android:drawable/ic_delete"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
