--- a/app/src/main/res/layout/swipe_half_fragment.xml
+++ b/app/src/main/res/layout/swipe_half_fragment.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/imgProfilePic"
                 android:layout_width="match_parent"
                 android:layout_height="235dp"
-                android:src="@drawable/whiteDog"
+                android:src="@drawable/white_dog"
                 android:padding="0dp"
                 android:scaleType="centerCrop"
                 card_view:layout_constraintTop_toTopOf="parent"
@@ -82,6 +82,18 @@
                 android:text="size"
                 app:layout_constraintTop_toBottomOf="@+id/tvDogName"
                 app:layout_constraintStart_toEndOf="@+id/tvDogGender"
+                app:layout_constraintEnd_toStartOf="@+id/tvBreed"
+                android:fontFamily="sans-serif-light"
+                android:textSize="18sp"
+                android:textAlignment="center"/>
+
+            <TextView
+                android:id="@+id/tvBreed"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:text="breed"
+                app:layout_constraintTop_toBottomOf="@+id/tvDogName"
+                app:layout_constraintStart_toEndOf="@+id/tvDogSize"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:fontFamily="sans-serif-light"
                 android:textSize="18sp"
