--- a/app/src/main/res/layout/notification_fragment.xml
+++ b/app/src/main/res/layout/notification_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_height="50dp"
         android:scaleType="centerCrop"
         android:layout_margin="@dimen/text_margin"
-        android:src="@drawable/whiteDog"
+        android:src="@drawable/white_dog"
         android:layout_gravity="center"/>
 
     <LinearLayout
