--- a/app/src/main/res/layout/swipe_full_fragment.xml
+++ b/app/src/main/res/layout/swipe_full_fragment.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imgProfilePic"
         android:layout_width="match_parent"
         android:layout_height="235dp"
-        android:src="@drawable/whiteDog"
+        android:src="@drawable/white_dog"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
