--- a/app/src/main/res/layout/swipe_half_fragment.xml
+++ b/app/src/main/res/layout/swipe_half_fragment.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/imgProfilePic"
                 android:layout_width="match_parent"
                 android:layout_height="235dp"
-                android:src="@drawable/whiteDog"
+                android:src="@drawable/white_dog"
                 android:padding="0dp"
                 android:scaleType="centerCrop"
                 card_view:layout_constraintTop_toTopOf="parent"
