--- a/app/src/main/res/layout/fragment_matched_profile.xml
+++ b/app/src/main/res/layout/fragment_matched_profile.xml
@@ -4,25 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".SwipeFragment">
+    tools:context=".HalfSwipeFragment">
 
     <!--src is temporary until we can get database working-->
     <ImageView
         android:id="@+id/imgProfilePic"
         android:layout_width="match_parent"
         android:layout_height="235dp"
-        android:src="@drawable/white_dog"
+        android:src="@drawable/samara_ball"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:padding="0dp"
-        android:scaleType="fitCenter"/>
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:id="@+id/tvDogName"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:text="Luna"
+        android:text="Samara"
         app:layout_constraintTop_toBottomOf="@+id/imgProfilePic"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -35,7 +35,7 @@
         android:id="@+id/tvDogAge"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:text="age"
+        android:text="4yr"
         app:layout_constraintTop_toBottomOf="@+id/tvDogName"
         app:layout_constraintEnd_toStartOf="@+id/tvDogGender"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
         android:id="@+id/tvDogGender"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:text="gender"
+        android:text="F"
         app:layout_constraintTop_toBottomOf="@+id/tvDogName"
         app:layout_constraintStart_toEndOf="@+id/tvDogAge"
         app:layout_constraintEnd_toStartOf="@+id/tvDogSize"
@@ -59,7 +59,7 @@
         android:id="@+id/tvDogSize"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:text="size"
+        android:text="35lbs"
         app:layout_constraintTop_toBottomOf="@+id/tvDogName"
         app:layout_constraintStart_toEndOf="@+id/tvDogGender"
         app:layout_constraintEnd_toStartOf="@+id/tvBreed"
@@ -71,7 +71,7 @@
         android:id="@+id/tvBreed"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:text="breed"
+        android:text="Beagle mix"
         app:layout_constraintTop_toBottomOf="@+id/tvDogName"
         app:layout_constraintStart_toEndOf="@+id/tvDogSize"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,17 +90,22 @@
         android:layout_marginStart="8dp"/>
 
     <ScrollView
-
+        android:id="@+id/scrollViewBio"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/vRuleLine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="12dp"
+        android:paddingTop="12dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        android:paddingBottom="12dp"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="70dp">
+
+        <!--TODO: See if this really doesn't scroll all the way to the bottom -->
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -111,7 +116,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-light"
-                android:text="Lorem ipsum dolor sit amet. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                android:text="Lorem ipsum dolor sit amet. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
                 android:textSize="18sp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -135,32 +140,47 @@
                 app:layout_constraintStart_toEndOf="@+id/txtOwnerName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Owner name"
+                android:text="Angela Villadiego"
                 android:textSize="18sp"
                 android:layout_marginTop="12dp"
                 android:layout_marginLeft="8dp"
                 app:layout_constraintHorizontal_bias="0.0"/>
 
-            <Button
-                android:id="@+id/btnCall"
-                android:padding="10dp"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:drawableLeft="@drawable/ic_baseline_local_phone_24"
-                app:cornerRadius="50dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvOwnerName"
-                android:text="Call      "
-                android:textFontWeight="1000"
-                android:gravity="center"/>
+<!--            <Button-->
+<!--                android:id="@+id/btnCall"-->
+<!--                android:padding="10dp"-->
+<!--                android:layout_width="200dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="12dp"-->
+<!--                android:drawableLeft="@drawable/ic_baseline_local_phone_24"-->
+<!--                app:cornerRadius="50dp"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/tvOwnerName"-->
+<!--                android:text="Call      "-->
+<!--                android:textFontWeight="1000"-->
+<!--                android:gravity="center"/>-->
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </ScrollView>
+
+    <Button
+        android:id="@+id/btnCall"
+        android:padding="10dp"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:drawableLeft="@drawable/ic_baseline_local_phone_24"
+        app:cornerRadius="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/scrollViewBio"
+        android:text="Call      "
+        android:textFontWeight="1000"
+        android:gravity="center"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabLike"
