--- a/app/src/main/res/layout/swipe_half_fragment.xml
+++ b/app/src/main/res/layout/swipe_half_fragment.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".SwipeFragment">
+    tools:context=".HalfSwipeFragment"
+    android:id="@+id/half_swipe_view">
 
     <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
