--- a/app/src/main/res/layout/fragment_matched_profile.xml
+++ b/app/src/main/res/layout/fragment_matched_profile.xml
@@ -183,7 +183,7 @@
         android:gravity="center"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabLike"
+        android:id="@+id/fabLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
