--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -167,22 +167,21 @@ android:layout_height="match_parent" >
             app:layout_constraintTop_toBottomOf="@+id/edtBreed"
             android:background="@color/white"/>
 
-    <!--    <Button-->
-    <!--        android:id="@+id/btnSave"-->
-    <!--        android:layout_width="0dp"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginStart="8dp"-->
-    <!--        android:layout_marginEnd="8dp"-->
-    <!--        android:layout_marginBottom="8dp"-->
-    <!--        android:visibility="gone"-->
-    <!--        android:text="@string/save"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/edtAge"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintVertical_bias="1.0"-->
-    <!--        />-->
-
+        <Button
+            android:id="@+id/btnSave"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:visibility="gone"
+            android:text="@string/save"
+            app:layout_constraintTop_toBottomOf="@+id/edtAge"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            />
 
 
         <TextView
