--- a/app/src/main/res/layout/swipe_half_fragment.xml
+++ b/app/src/main/res/layout/swipe_half_fragment.xml
@@ -7,6 +7,22 @@
     tools:context=".HalfSwipeFragment"
     android:id="@+id/half_swipe_view">
 
+    <TextView
+        android:id="@+id/tvEndOfLine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Looks like you've seen everyone available! Check again later!"
+        android:textColor="@android:color/darker_gray"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:textSize="28sp"
+        android:textAlignment="center"
+        android:visibility="invisible"/>
+
     <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
@@ -20,7 +36,8 @@
         card_view:cardCornerRadius="4dp"
         android:layout_margin="30dp"
         card_view:layout_constraintVertical_bias="0.3"
-        card_view:cardElevation="10dp">
+        card_view:cardElevation="10dp"
+        >
 
         <!-- Main Content View -->
         <androidx.constraintlayout.widget.ConstraintLayout
