--- a/app/src/main/res/layout/swipe_full_fragment.xml
+++ b/app/src/main/res/layout/swipe_full_fragment.xml
@@ -8,6 +8,22 @@
     android:id="@+id/full_profile_layout"
     android:clickable="true">
 
+    <TextView
+        android:id="@+id/tvEndOfLine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Looks like you've seen everyone available! Check again later!"
+        android:textColor="@android:color/darker_gray"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:textSize="28sp"
+        android:textAlignment="center"
+        android:visibility="invisible"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -123,22 +139,25 @@
         android:id="@+id/fabLike"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
+        android:layout_margin="20dp"
         android:clickable="true"
         android:backgroundTint="@android:color/holo_green_light"
         app:backgroundTint="#8BC34A"
         android:src="@android:drawable/btn_star"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toEndOf="@id/fabDislike"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:scaleType="fitCenter"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabDislike"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
+        android:layout_margin="20dp"
         android:clickable="true"
         android:backgroundTint="@color/bittersweet"
         android:src="@android:drawable/ic_delete"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintEnd_toStartOf="@id/fabLike"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
