Disliked dogs are now added to the disliked list and excluded from visible results in both HalfSwipeFragment.kt and FullSwipeFragment.kt. database so dogId is UUID converted to string. Array lists were also set to string lists instead of Int lists, converters were altered to reflect change.

--- a/app/src/main/res/layout/swipe_full_fragment.xml
+++ b/app/src/main/res/layout/swipe_full_fragment.xml
@@ -9,6 +9,15 @@
     android:clickable="true">
 
     <TextView
+        android:id="@+id/dog_id_holder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="unset"/>
+
+    <TextView
         android:id="@+id/tvEndOfLine"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
