--- a/app/src/main/res/layout/swipe_half_fragment.xml
+++ b/app/src/main/res/layout/swipe_half_fragment.xml
@@ -23,6 +23,15 @@
         android:textAlignment="center"
         android:visibility="invisible"/>
 
+    <TextView
+        android:id="@+id/dog_id_holder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="unset"/>
+
     <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
