--- a/app/src/main/res/layout/matches_list_fragment.xml
+++ b/app/src/main/res/layout/matches_list_fragment.xml
@@ -18,11 +18,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <Button
-        android:id="@+id/btnToMatchedProfile"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Go To Match ->"
-        android:padding="12dp"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvMatches"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="20dp"
+            />
+
 </FrameLayout>
