--- a/app/src/main/res/layout/matches_list_fragment.xml
+++ b/app/src/main/res/layout/matches_list_fragment.xml
@@ -13,6 +13,7 @@
 <!--    tools:listitem="@layout/match_fragment" />-->
 
 <FrameLayout
+    android:id="@+id/matchesFragment"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
