Adding dark theme colors....

--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -93,6 +93,7 @@
         android:text="@string/sign_in"
         android:textStyle="bold"
         app:cornerRadius="50dp"
+        android:textColor="?attr/colorOnPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/swRememberMe" />
@@ -117,10 +118,10 @@
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="?attr/colorOnPrimary"
         android:padding="10dp"
         android:text="@string/sign_up"
-        android:textColor="@color/spacecadet"
+        android:textColor="?attr/colorAccent"
         android:textStyle="bold"
         app:cornerRadius="50dp"
         app:layout_constraintEnd_toEndOf="parent"
