--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,8 +3,9 @@
     <style name="Theme.PROG20082_Project_AV_JH" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/azure</item>
-        <item name="colorPrimaryVariant">@color/spacecadet</item>
+        <item name="colorPrimaryVariant">@color/azure</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/spacecadet</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/bittersweet</item>
         <item name="colorSecondaryVariant">@color/honeyyellow</item>
@@ -14,6 +15,7 @@
         <!-- Customize your theme here. -->
         <item name="android:textColor">@color/spacecadet</item>
         <item name="fontFamily">@font/nunito</item>
+        <item name="colorAccent">@color/spacecadet</item>
     </style>
 
     <style name="NunitoTextViewStyle" parent="android:Widget.TextView">
